--- a/conatct.html
+++ b/conatct.html
@@ -5,30 +5,25 @@
 </head>
 
 <body>
-
-    
     <!--Navigation bar-->
     <div id="nav-placeholder">
+
     </div>
+
     <script>
         $(function () {
             $("#nav-placeholder").load("nav.html");
         });
     </script>
     <!--end of Navigation bar-->
-
-
     <div class="container">
         <div class="content">
             <div class="text">
-                <h1>helps traders win regardless of market conditions <br> </h1>
-                <p>Trading Tool helps users grow their crypto investments using a feature-rich terminal and proven
-                    automated bot that operates on a major exchange.
-            </div>
-            <div class="container111">
-                <img src="images/investor1.png" alt="">
+                <h1>Contact Us</h1>
+                <br>
             </div>
         </div>
+
     </div>
 </body>
 
