--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="container">
         <div class="content">
             <div class="text">
-                <h1>helps traders win regardless of market conditions <br> </h1>
+                <h1>helps traders win regardlessss of market conditions <br> </h1>
                 <p>Trading Tool helps users grow their crypto investments using a feature-rich terminal and proven
                     automated bot that operates on a major exchange.
             </div>
