--- a/conatct.html
+++ b/conatct.html
@@ -16,15 +16,27 @@
         });
     </script>
     <!--end of Navigation bar-->
-    <div class="container">
-        <div class="content">
-            <div class="text">
-                <h1>Contact Us</h1>
-                <br>
-            </div>
+    <div class="block">
+        <span class="tag is-success">
+          Hello World
+          <button class="delete is-small"></button>
+        </span>
+      </div>
+      
+      <div class="notification is-danger">
+        <button class="delete"></button>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit lorem ipsum dolor sit amet, consectetur adipiscing elit
+      </div>
+      
+      <article class="message is-info">
+        <div class="message-header">
+          Info
+          <button class="delete"></button>
         </div>
-
-    </div>
+        <div class="message-body">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque risus mi, tempus quis placerat ut, porta nec nulla. Vestibulum rhoncus ac ex sit amet fringilla. Nullam gravida purus diam, et dictum felis venenatis efficitur. Aenean ac eleifend lacus, in mollis lectus. Donec sodales, arcu et sollicitudin porttitor, tortor urna tempor ligula, id porttitor mi magna a neque. Donec dui urna, vehicula et sem eget, facilisis sodales sem.
+        </div>
+      </article>
 </body>
 
 </html>
