--- a/nav.html
+++ b/nav.html
@@ -1,4 +1,5 @@
 <html lang="en">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
 
 <head>
     <meta charset="UTF-8">
