Fix navbar error due to folder structure

--- a/pages/nav.html
+++ b/pages/nav.html
@@ -8,21 +8,21 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-    <link rel="stylesheet" type="text/css" href="./styles/style.css">
+    <link rel="stylesheet" type="text/css" href="/styles/style.css">
     <title>Landing Page Design Using HTML & CSS</title>
 </head>
 
 <body>
     <div class="container">
         <div class="header">
-            <img src="images/logo.png" class="logo">
+            <img src="/images/logo.png" class="logo">
             <h2>Trading Tool</h2>
             <nav>
                 <ul>
-                    <li><a href="./index.html">Home</a></li>
-                    <li><a href="./pages/features.html">Features</a></li>
-                    <li><a href="./pages/about_us.html">About US</a></li>
-                    <li><a href="./pages/contact.html">Contact</a></li>
+                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="/pages/features.html">Features</a></li>
+                    <li><a href="/pages/about_us.html">About US</a></li>
+                    <li><a href="/pages/contact.html">Contact</a></li>
                 </ul>
             </nav>
             <button class="btn1" id="btn1">Log In</button>
