--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </div>
     <script>
         $(function () {
-            $("#nav-placeholder").load("nav.html");
+            $("#nav-placeholder").load("/pages/nav.html");
         });
     </script>
     <!--end of Navigation bar-->
@@ -26,7 +26,7 @@
                     automated bot that operates on a major exchange.
             </div>
             <div class="container111">
-                <img src="./images/investor1.png" alt="">
+                <img src="/images/investor1.png" alt="">
             </div>
         </div>
     </div>
