--- a/pages/features.html
+++ b/pages/features.html
@@ -10,7 +10,7 @@
     </div>
     <script>
         $(function () {
-            $("#nav-placeholder").load("nav.html");
+            $("#nav-placeholder").load("/pages/nav.html");
         });
     </script>
     <!--end of Navigation bar-->
